finally fix poker hands that have been too wide

--- a/themes/poker/main.css
+++ b/themes/poker/main.css
@@ -1300,7 +1300,7 @@ dl.helpbox-list dd {
 	margin-bottom: 10px;
 	border: 1px solid #ccc;
 	background: #fff;
-	width: 392px;
+	width: 380px;
 }
 
 dl.helpbox-list dt {
